--- a/universe project/astronomy.html
+++ b/universe project/astronomy.html
@@ -4,19 +4,19 @@
 <FONT COLOR=BLUE SIZE=20>
 <B><U>ASTRONOMY</U></B><BR>
 <FONT COLOR=PINK SIZE=20>
-<IMG SRC="SHUT.png"><BR>
+<IMG SRC="shut.png"><BR>
 <UL>
-<LI><A HREF="UNIVERSE.HTML">UNIVERSE</A></LI>
-<LI><A HREF="DARK MATTER.HTML">DARK MATTER</A></LI>
-<LI><A HREF="STARS.HTML">STARS</A></LI>
-<LI><A HREF="AURORAS.HTML">AURORAS</A></LI>
-<LI><A HREF="GALAXIES.HTML">GALAXIES</A></LI>
-<LI><A HREF="NEBULAE.HTML">NEBULAE</A></LI>
-<LI><A HREF="PLANETS.HTML">PLANETS</A></LI>
-<LI><A HREF="COMETS.HTML">COMETS</A></LI><BR>
+<LI><A HREF="universe.html">UNIVERSE</A></LI>
+<LI><A HREF="dark matter.html">DARK MATTER</A></LI>
+<LI><A HREF="stars.html">STARS</A></LI>
+<LI><A HREF="auroras.html">AURORAS</A></LI>
+<LI><A HREF="galaxies.html">GALAXIES</A></LI>
+<LI><A HREF="nebulae.html">NEBULAE</A></LI>
+<LI><A HREF="planets.html">PLANETS</A></LI>
+<LI><A HREF="comets.html">COMETS</A></LI><BR>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="index.html">Back</a></p>
+<pre>                                                                        <a href="../index.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
