--- a/universe project/auroras.html
+++ b/universe project/auroras.html
@@ -4,9 +4,9 @@
 <BODY BGCOLOR="BLACK">
 <H1>Auroras<H1><BR>
 <FONT COLOR="BLACK">
-<IMG SRC="NEW PICTURE (10).PNG"><BR>
-JJJJJJJJJJJJJJJJJJJJJ<IMG SRC="NEW PICTURE (11).PNG"><BR>
-JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ<IMG SRC="NEW PICTURE (12).PNG"><BR>
+<IMG SRC="new picture (10).png"><BR>
+<pre>                          <IMG SRC="new picture (11).png"><BR></pre>
+<pre>                                                    <IMG SRC="new picture (12).png"><BR></pre>
 <FONT COLOR="BLUE">
 Also known as northern and southern (polar) lights or aurorae (singular: aurora), are natural light displays in the sky, usually observed at night, particularly in the polar regions.<BR>
 They typically occur in the ionosphere. They are also referred to as polar auroras.<BR>
@@ -24,9 +24,8 @@ Its southern counterpart, the aurora australis or the southern polar lights, has
 Australis is the Latin word for "of the South."<BR>
 Auroras can be spotted throughout the world and on other planets.<BR> 
 It is most visible closer to the poles due to the longer periods of darkness and the magnetic field.<BR>
-<IMG SRC="NEW PICTURE (24).PNG"><BR>
+<IMG SRC="new picture (24).png"><BR>
 <palign="right">
-<font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkkkkkkkkkffffffffffsssssssssskjjj<a href="astronomy.html">Back</a></p>
+<pre><font color="black">                                                                                                                          <a href="astronomy.html">Back</a></pre>
 </BODY>
 </HTML>
