--- a/universe project/comets.html
+++ b/universe project/comets.html
@@ -3,7 +3,7 @@
 <FONT COLOR="REDSISH BLUE" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>COMETS</U></B><BR>
-<IMG SRC="COMETS.PNG">
+<IMG SRC="comets.png">
 <UL>
 <LI>A comet is an icy body that releases gas or dust.<br></LI>
 <LI>Comets travel around the sun in long, oval orbits.<BR></LI>
@@ -13,7 +13,7 @@
 <LI>Halley's comet which is visible from earth once in 76 years, was seen in about 8BC, and so some say that it was the bible's star of bethlehem.</li><br>
 <font color="black">
 <palign="right">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a></p>
+<pre>                                                                    <a href="astronomy.html">Back</a></pre>
 
 </UL>
 </BODY>
