--- a/universe project/dark matter.html
+++ b/universe project/dark matter.html
@@ -3,10 +3,10 @@
 <FONT COLOR="purple" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>DARK MATTER</U></B><BR>
-<IMG SRC="New Picture (13).PNG"><BR>
+<IMG SRC="new picture (13).png"><BR>
 <font color="black">
-aaaaaaaaaaaaaaaa<IMG SRC="NEW Picture (14).PNG"><BR>
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<IMG SRC="NEW Picture (15).PNG"><BR>
+<pre>                <IMG SRC="new picture (14).png"><BR></pre>
+<pre>                                 <IMG SRC="new picture (15).png"><BR></pre>
 <font color="purple">
 <UL>
 <LI>DARK MATTER IS SPACE MATTER WE CANNOT SEE AS IT DOES NOT EMIT LIGHT.<br></LI>
@@ -17,7 +17,7 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<IMG SRC="NEW Picture (15).PNG"><BR>
 <LI>INTERGALACTIC MATTER IS MADE UP OF WIMPs(WEAKLY INTERACTING MASSIVE PARTICLES).<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a></p>
+<pre>                                                                    <a href="astronomy.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
