--- a/universe project/galaxies.html
+++ b/universe project/galaxies.html
@@ -3,7 +3,7 @@
 <FONT COLOR="ORANGE" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>GALAXIES</U></B><BR>
-<IMG SRC="NEW PICTURE (5).PNG">
+<IMG SRC="new picture (5).png">
 <UL>
 <LI>GALAXIES ARE GIANT GROUPS OF MILLIONS OF TRILLIONS OF STARS.<br></LI>
 <LI>THERE MAY BE 20 TRILLION GALAXIES IN THE UNIVERSE.<BR></LI>
@@ -18,7 +18,7 @@
 <LI>NEW STARS ARE CONSTANTLY FORMING OUT OF GAS AND DUST IN SPIRAL GALAXIES. SMALLER GROUPS OF STARS CALLED GLOBULAR CLUSTERS OFTEN SURROUND SPIRAL GALAXIES. A TYPICAL GLOBULAR CLUSTER HAS ABOUT 1 MILLION STARS.<br></LI>
 <align="right">
 <font color="black">
-jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a>
+<pre>                                                                    <a href="astronomy.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
