--- a/universe project/jupiter's moons.html
+++ b/universe project/jupiter's moons.html
@@ -3,7 +3,7 @@
 <FONT COLOR="WHITE" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>JUPITER'S MOONS</U></B><BR>
-<IMG SRC="NEW PICTURE (6).PNG">
+<IMG SRC="new picture (6).png">
 <UL>
 <LI>On Jan. 7, 1610, Galileo Galilei's improvements to the telescope enabled humanity to see Jupiter's four largest moons for the first time.<br></LI>
 <LI> Io, Europa, Ganymede and Callisto--the so-called Galilean satellites--were seen by the Long Range Reconnaissance Imager on the New Horizons spacecraft during its flyby of Jupiter in late February 2007.<BR></LI>
@@ -12,7 +12,7 @@
 <LI>Ganymede, the largest moon in the solar system, has a dirty ice surface cut by fractures and peppered by impact craters.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="jupiter.html">Back</a></p>
+<pre>                                                                    <a href="jupiter.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
