--- a/universe project/mars.html
+++ b/universe project/mars.html
@@ -4,7 +4,7 @@
 <FONT COLOR="PINK" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>MARS</U></B><BR>
-<marquee><IMG SRC="MARS.JPG"></marquee>
+<marquee><IMG SRC="mars.jpg"></marquee>
 <UL>
 <LI>Mars is the fourth planet from the sun.<br></LI>
 
@@ -16,7 +16,7 @@
 
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 
  
  
