--- a/universe project/mercury.html
+++ b/universe project/mercury.html
@@ -3,7 +3,7 @@
 <FONT COLOR="RED" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>MERCURY</U></B><BR>
-<marquee><IMG SRC="MERCURY.JPG"></marquee>
+<marquee><IMG SRC="mercury.jpg"></marquee>
 <UL>
 <LI>MERCURY IS THE NEAREST PLANET TO THE SUN.<br></LI>
 <LI>MERCURY IS THE FASTEST ORBITTING PLANET OF OUR SOLAR SYSTEM ORBITTING THE SUN IN JUST 88 DAYS.<BR></LI>
@@ -13,7 +13,7 @@
 <LI>THE CORE OF MERCURY, ABOUT 75%, IS MADE UP OF IRON.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
