--- a/universe project/nebulae.html
+++ b/universe project/nebulae.html
@@ -4,8 +4,8 @@
 <BODY BGCOLOR="BLACK">
 <B><U>NEBULAE</U></B><BR>
 <FONT COLOR="BLACK" SIZE=10>
-NN<IMG SRC="New Picture (2).PNG">NNNNNNNNNN<IMG SRC="New Picture (19).PNG"><BR>
-NNNNNNNNNNN<IMG SRC="New Picture (1).PNG">NNNNNNNNNNNNN<IMG SRC="New Picture (20).PNG">
+<pre>  <IMG SRC="new picture (2).png">                          <IMG SRC="new picture (19).png"><BR></pre>
+<pre>                     <IMG SRC="new picture (1).png">               	       	<IMG SRC="new picture (20).png"></pre>
 <FONT COLOR="YELLOW" SIZE=10>
 <UL>
 <LI>NEBULAE WAS THE WORD ONCE USED FOR ANY FUZZY PATCH OF LIGHT IN THE NIGHT SKY.<br></LI>
@@ -16,7 +16,7 @@ NNNNNNNNNNN<IMG SRC="New Picture (1).PNG">NNNNNNNNNNNNN<IMG SRC="New Picture (20
 <LI>PLANETARY NEBULAE FORM WHEN A DYING STAR THROWS OFF THE OUTER LAYERS OF ITS ATMOSPHERE.<br></LI>
 <LI>THE RING NEBULAE IN LYRA IS THE BEST-KNOWN OF THE PLANETARY NEBULAE.<br></LI>
 <font color=black>
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a></p>
+<pre>                                                                    <a href="astronomy.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
