--- a/universe project/neptune.html
+++ b/universe project/neptune.html
@@ -3,7 +3,7 @@
 <FONT COLOR="YELLOW" SIZE=10>
 <body BGCOLOR="BLACK">
 <B><U>NEPTUNE</U></B><BR>
-<IMG SRC="NEW PICTURE (9).PNG">
+<IMG SRC="new picture (9).png">
 <FONT COLOR=RED>
 <h4>THIS IS THE PICTURE OF NEPTUNE(BLUE) AND ITS SATELLITE-TRITON.</H4>
 <FONT COLOR=YELLOW>
@@ -22,7 +22,7 @@
  
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planeTS.html">Back</a></p>
+<pre>                                                                     <a href="planets.html">Back</a></pre>
 
 
 </UL>
