--- a/universe project/response.html
+++ b/universe project/response.html
@@ -4,7 +4,7 @@
 <h3>ENTER YOUR INFORMATION: </h3>
 
 <b><i>ENTER YOUR NAME : </i></b>
-<input type="text" size="25"><br><br>
+<input type="text" name="name" size="25"><br><br>
 
 <B><I>ENTER THE NAME OF YOUR CITY :<I><B><INPUT TYPE="TEXT" NAME="ADDRESS" ROWS="2" MAXLENGTH="100"><BR><BR>
 
@@ -15,9 +15,9 @@
 <input type="radio" name="radios" value="radio3" checked>20-45yrs<br>
 <input type="radio" name="radios" value="radio4" checked>46yrs or older<BR><BR><BR>
 
-<B><I>ENTER YOUR PROFESSION :<I><B><INPUT TYPE="TEXT" NAME="ADDRESS" ROWS="2" MAXLENGTH="100"><BR><BR>
+<B><I>ENTER YOUR PROFESSION :<I><B><INPUT TYPE="TEXT" NAME="profession" ROWS="2" MAXLENGTH="100"><BR><BR>
 
-<B><I>ENTER YOUR HOBBY:<I><B><INPUT TYPE="TEXT" NAME="ADDRESS" ROWS="2" MAXLENGTH="100"><BR><BR>
+<B><I>ENTER YOUR HOBBY:<I><B><INPUT TYPE="TEXT" NAME="hobby" ROWS="2" MAXLENGTH="100"><BR><BR>
 
 <br><b><i>RATE THE WEBSITE: </i></b>
 <select>
