--- a/universe project/saturn.html
+++ b/universe project/saturn.html
@@ -3,7 +3,7 @@
 <FONT COLOR="GREEN" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>SATURN</U></B><BR>
-<IMG SRC="NEW PICTURE (7).PNG">
+<IMG SRC="new picture (7).png">
 
 <UL>
 <LI>Saturn is the sixth planet from the sun.<br></LI>
@@ -14,7 +14,7 @@
 <LI>The planet can be seen from Earth with the unaided eye, but its rings cannot be seen</LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                           <a href="planets.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
