--- a/universe project/stars.html
+++ b/universe project/stars.html
@@ -4,7 +4,7 @@
 <BODY BGCOLOR="BLACK">
 <B><U>STARS</U></B><BR>
 <UL>
-<IMG SRC="NEW PICTURE (4).PNG">
+<IMG SRC="new picture (4).png">
 <LI>STARS ARE GAS OF MAINLY HELIUM AND HYDROGEN GAS.<br></LI>
 <LI>THE HEART OF A STAR REACHES 16 MILLION DEGREE CELCIUS.<BR></LI>
 <LI>THE GAS IN STARS IS IN A SPECIAL HOT STATE CALLED PLASMA, MADE OF ATOMS STRIPPED OF ELECTRONS.<br></LI>
@@ -14,7 +14,7 @@
 <LI>OUR SUN IS A MEDIUM SIZED STAR.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a></p>
+<pre>                                                                  <a href="astronomy.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
