--- a/universe project/universe.html
+++ b/universe project/universe.html
@@ -3,7 +3,7 @@
 <FONT COLOR="brown" SIZE=10>
 <BODY BGCOLOR="black">
 <B><U>THE UNIVERSE</U></B><BR>
-<img src="New Picture (16).png"><br>
+<img src="new picture (16).png"><br>
 <UL>
 <LI>THE UNIVERSE IS EVERYTHING WE KNOW-ALL OF SPACE AND TIME.<br></LI>
 <LI>THE UNIVERSE IS ALMOST EMPTY WITH SMALL CLUSTERS OF MATTER AND ENERGY.<BR></LI>
@@ -13,7 +13,7 @@
 <LI>THE RECENT THEORIES SUGGEST THAT THERE MAY BE SEVERAL OTHER UNIVERSES THAT WE CAN NEVER KNOW.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkjjjjjjgggggggggggggkkkkkkkkjjj<a href="astronomy.html">Back</a></p>
+<pre>                                                                     <a href="astronomy.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
