--- a/universe project/uranus.html
+++ b/universe project/uranus.html
@@ -3,7 +3,7 @@
 <FONT COLOR="RED" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>URANUS</U></B><BR>
-<img src="new picture.PNG">
+<img src="new picture.png">
 <UL>
 <LI>Uranus is the seventh planet from the sun.<br></LI>
 <LI>Uranus is the farthest planet that can be seen without a telescope.<BR></LI>
@@ -14,7 +14,7 @@
 <LI>Most of our information about Uranus comes from the flight of the United States spacecraft Voyager 2.</LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 
  
 
