--- a/universe project/venus.html
+++ b/universe project/venus.html
@@ -4,7 +4,7 @@
 <FONT COLOR="BROWN" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>VENUS</U></B><BR>
-<IMG SRC="Venus_Clouds.jpg"><BR>
+<IMG SRC="venus_clouds.jpg"><BR>
 
 <UL>
 <LI>VENUS IS THE TSECOND PLANET FROM THE SUN.<br></LI>
@@ -14,7 +14,7 @@
 <LI>VENUS IS THE NEAREST PLANET TO YHE EARTH IN SIZE-12,102 KM AWAY FROM EARTH.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
