--- a/universe project/earth.html
+++ b/universe project/earth.html
@@ -3,8 +3,8 @@
 <FONT COLOR="GREY" SIZE=10>
 <BODY BGCOLOR="BLack">
 <B><U>EARTH</U></B><BR>
-<IMG SRC="H (1).PNG"><br>
-<IMG SRC="new picture (18).PNG">
+<IMG SRC="h (1).png"><br>
+<IMG SRC="new picture (18).png">
 <UL>
 <LI>THE EARTH IS THE THIRD PLANET FROM THE SUN.<br></LI>
 <LI>THE EARTH IS THE FIFTH LARGEST PLANET IN OUR SOLAR SYSTEM.<BR></LI>
@@ -14,7 +14,7 @@
 <LI>MOST OF THE EARTH'S ROCKY SURFACE IS DROWNED BELOW OCEANS.<br></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
