--- a/universe project/jupiter.html
+++ b/universe project/jupiter.html
@@ -3,7 +3,7 @@
 <FONT COLOR="BROWN" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>JUPITER</U></B><BR>
-<IMG SRC="JUPITER.JPG"><BR>
+<IMG SRC="jupiter.jpg"><BR>
 <UL>
 <LI>Jupiter is the fifth planet from the sun.<br></LI>
 <LI>Jupiter is the biggest planet in our solar system </LI>
@@ -11,10 +11,10 @@
 <LI> It takes 11.86 years to complete its orbit.</LI>
 <LI>It is a gigantic planet, 142984 km across.<br></LI>
 <LI>The pressure at the heart of jupiter makes it glow as brightly as 4 million billion 100-watt light bulbs.</LI><BR>
-<A HREF="JUPITER'S MOONS.HTML">JUPITER'S MOONS</A>
+<A HREF="jupiter's moons.html">JUPITER'S MOONS</A>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href="planets.html">Back</a></p>
+<pre>                                                                    <a href="planets.html">Back</a></pre>
 </UL>
 </BODY>
 </HTML>
