--- a/universe project/planets.html
+++ b/universe project/planets.html
@@ -3,7 +3,7 @@
 <FONT COLOR="VIOLET" SIZE=10>
 <BODY BGCOLOR="BLACK">
 <B><U>PLANETS</U></B><BR>
-<marquee><IMG SRC="s.PNG"></marquee>
+<marquee><IMG SRC="s.png"></marquee>
 <UL>
 <LI>PLANETS ARE GLOBE-SHAPED SPACE OBJECTS THAT ORBIT A STAR .<br></LI>
 <LI>PLANETS ARE NEVER MORE THAN 20% OF THE SIZE OF THEIR STAR..<BR></LI>
@@ -11,16 +11,16 @@
 <LI>NOWADAYS PLANETS HAVE BEEN FOUND ORBITTING AROUND OTHER STARS.<br></LI>
 <LI>THEY ARE CALLED EXTRE-SOLAR PLANETS.<br></LI>
 <LI>THERE ARE 8 PLANETS IN OUR SOLAR SYSTEM.<br></LI>
-<LI><A HREF="MERCURY.HTML">MERCURY</A></LI>
-<LI><A HREF="VENUS.HTML">VENUS</A></LI>
-<LI><A HREF="EARTH.HTML">EARTH</A></LI>
-<LI><A HREF="MARS.HTML">MARS</A></LI>
-<LI><A HREF="JUPITER.HTML">JUPITER</A></LI>
-<LI><A HREF="SATURN.HTML">SATURN</A></LI>
-<LI><A HREF="URANUS.HTML">URANUS</A></LI>
-<LI><A HREF="NEPTUNE.HTML">NEPTUNE</A></LI>
+<LI><A HREF="mercury.html">MERCURY</A></LI>
+<LI><A HREF="venus.html">VENUS</A></LI>
+<LI><A HREF="earth.html">EARTH</A></LI>
+<LI><A HREF="mars.html">MARS</A></LI>
+<LI><A HREF="jupiter.html">JUPITER</A></LI>
+<LI><A HREF="saturn.html">SATURN</A></LI>
+<LI><A HREF="uranus.html">URANUS</A></LI>
+<LI><A HREF="neptune.html">NEPTUNE</A></LI>
 <palign="right">
 <font color="black">
-<p>jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjkkkkkkkkkkggggggggggggggggkkkkkkkkjjj<a href=".html">Back</a></p>
+<pre>                                                                    <a href="astronomy.html">Back</a></pre>
 </BODY>
 </HTML>
